--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,8 +16,8 @@ header .header-img {
     width: 100%;
 }
 
-header .header-img img{
-    object-fit: fill;
+header .header-img img {
+    object-fit: cover;
     width: 100%;
     position: absolute;
     top: 0;
@@ -25,7 +25,7 @@ header .header-img img{
 
 header .header-content {
     z-index: 100;
-    margin-top: 2rem;
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,6 +54,7 @@ header .header-content .header-input input {
     box-sizing: border-box;
     font-size: .9rem;
     font-weight: 700;
+    cursor: pointer;
 }
 
 header .header-content .header-input input:focus {
@@ -79,7 +80,7 @@ header .header-content .header-input button:hover {
     background-color: hsl(0, 0%, 24%);
 }
 
-header .header-content .header-input button img{
+header .header-content .header-input button img {
     width: .8rem;
     margin-top: .9rem;
 }
@@ -89,15 +90,19 @@ header .header-content .header-input button img{
 #ip-adress {
     background-color: #fff;
     position: absolute;
-    width: 55%;
+    width: 65%;
     height: 9rem;
-    margin: 1.7rem 20.8rem;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
     border: 1px solid hsl(0, 0%, 59%);
     font-family: 'Rubik', sans-serif;
     padding: 2rem;
     box-sizing: border-box;
     border-radius: .5rem;
-    z-index: 100;
+    z-index: 200;
 }
 
 #ip-adress ul {
@@ -142,4 +147,38 @@ header .header-content .header-input button img{
     width: 100%;
     height: 28rem;
     margin-top: 6.5rem;
+    z-index: 10;
+}
+
+@media (max-width: 475px) {
+    header .header-content .header-input input {
+        height: 2.8rem;
+        width: 14rem;
+        border: 1px solid #ddd;
+    }
+
+    header .header-img> img {
+        object-fit: cover;
+        width: 100%;
+        height: 20rem;
+        position: absolute;
+        top: 0;
+    }
+
+    #ip-adress {
+        background-color: #fff;
+        position: absolute;
+        width: 70%;
+        height: 20rem;
+        padding: .6rem 1rem;
+    }
+
+    #ip-adress ul {
+        flex-direction: column;
+    }
+
+    #ip-adress ul li:not(:first-child) {
+        border: none;
+        padding-left: 0;
+    }
 }
