--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,8 +145,8 @@ header .header-content .header-input button img {
 
 #map {
     width: 100%;
-    height: 35rem;
-    margin-top: 6.5rem;
+    height: 100vh;
+    margin-top: 5rem;
     z-index: 10;
 }
 
